# rbpi-absoluation

./: .gitignore  .gitmodules  Makefile  Makefile.am  configure.ac  prepare  purge  script.lua
doc/: .gitignore  Makefile  Makefile.am  README  doxyfile.conf
doc/diagram/: Basic.dia  Diagram1.dia  Diagram2.dia  Przeplyw.dia  a_la_gantt.dia  basic_component.dia  diagram3.dia  extended_comp.dia  groups.dia  reklamacja.dia  shop_with_place.dia  struktura_org.dia  zamowienie.dia
doc/graph/: export_swiat.plt  income_prod.plt  polityka_cen.plt  porownanie.plt  price_weight.plt  sale_prod.plt  stat_wysz_kanada.plt  stat_wysz_polska.plt  storage.plt  tmp.txt  visit_prod.plt
doc/tables/: analiza_rynkowa.ods  analiza_rynkowa.xls  analiza_rynkowa_wstep.xls  bilans.ods  koszty.ods  koszty_bp.ods  koszty_brutto.ods  prognoza.ods  prognoza_przychodow_bp.ods  rachunek.ods  wycena.ods
doc/tex/: Wypunktowanie.tex  abstract.tex  analiza_swot.tex  application.tex  biznesplan.tex  documentation.tex  karta_gwarancyjna_EN.tex  karta_gwarancyjna_PL.tex  obraz.tex  oferta_organizacja_analiza_kosztow_utrzymania.tex  oferta_organizacja_sklep_internetowy.tex  oferta_organizacja_system_zarzadzania_skladniki.tex  opis_plan_przedsiewziecia_opis_planowanego_przedsiewziecia.tex  paragrafy.tex  plan_bp.tex  plan_finansowy.tex  plan_finansowy_bilans.tex  plan_finansowy_koszty_miesieczne.tex  plan_finansowy_planowane_przychody.tex  plan_finansowy_zrodla_finansowania.tex  plan_inwest.tex  plan_inwest_uzasadnienie.tex  plan_inwest_uzasadnienie_opis_stanowiska_pracy.tex  plan_inwest_uzasadnienie_struktura_organizacyjna.tex  plan_inwest_uzasadnienie_struktura_zatrudnienia_i_wynagrodzen.tex  plan_inwest_uzasadnienie_uzasadnienie_techniczne.tex  plan_inwest_uzasadnienie_uzasadnienie_techniczne_charakterystyka_systemu.tex  plan_inwest_uzasadnienie_uzasadnienie_techniczne_implementacja.tex  plan_inwest_uzasadnienie_uzasadnienie_techniczne_koncepcja.tex  plan_inwest_uzasadnienie_uzasadnienie_techniczne_opis_systemu_zarzadzania.tex  plan_inwest_uzasadnienie_uzasadnienie_techniczne_podsumowanie.tex  plan_inwest_uzasadnienie_uzasadnienie_techniczne_sklep_internetowy.tex  plan_inwest_uzasadnienie_uzasadnienie_techniczne_specyfikacja.tex  plan_inwest_uzasadnienie_wstep.tex  plan_market.tex  plan_market_charakterystyka_produktow_i_uslug.tex  pojecia.tex  polityka_cen.tex  polityka_cookies_EN.tex  polityka_cookies_EN_cookies_policy.tex  (+42 more)
doc/tex/documentation/: aplikacja.tex  documentation.tex  plan.tex  platforma_sprzetowa.tex  pojecia.tex  system.tex  zalozenia_projektu.tex
doc/tex/presentation/: documentation.tex  pojecia.tex  present_body.tex  present_body_slide_3.tex  presentation.tex  slajd_1.tex  strona_tytul.tex
lib/: Makefile  Makefile.am
lib/bcm/: Makefile  Makefile.static  bcm2835.c
src/: Makefile  Makefile.am
src/ABI/: Makefile  Makefile.am  abi.h  adc.c  adc.h  bool.h  collections.c  collections.h  factory.c  factory.h  hardware.c  hardware.h  meta.c  meta.h  metadata.c  metadata.c.bak  metadata.h  object.c  object.h  pp_nightmare.h  primitives.h  shell.c  shell.h  terminal.c  terminal.h  utils.c  utils.h  variant.c  variant.h
src/CommandShell/: CommandShell.c  CommandShell.h  Makefile.static
src/FileTerminal/: .FileTerminal.h.kate-swp  FileTerminal.c  FileTerminal.h  Makefile.static
src/LuaShell/: LuaShell.c  LuaShell.h  Makefile.static
src/PythonShell/: Makefile  PythonShell.c  PythonShell.h
src/ads1256/: Makefile  ads1256.c  ads1256.h
src/app/: Makefile  Makefile.static  app.c  app.h  main.c  main.h  mloader.c  mloader.h
src/parser/: Makefile  Makefile.am  lexer.l  parser.output  parser.y
